Created async function to fetch and parse the data

--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
       <li>or a state</li>
     </ul>
   </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+<script>
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  
+  // async function to fetch data from GitHub API
+  const getData = async function () {
+    const request = await fetch(endpoint);
+    const data = await request.json(); // parse the data
+    return data;
+  };
+
+  // function to check for search results
+  const searchResults = function () {
+    
+  };
+
+  getData();
 </script>
+
 </body>
 </html>
